--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -25,7 +25,18 @@ html {
 
     .ant-collapse-content {
       .ant-collapse-content-box {
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 20px;
         padding: 16px 0 0;
+
+        li {
+          list-style-type: disc;
+        }
+
+        ul {
+          padding-inline-start: 24px;
+        }
       }
     }
   }
