--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -16,19 +16,23 @@ html {
       align-items: center;
       padding: 0;
 
-      .ant-collapse-header-text {
+      .ant-collapse-title {
         font-size: 16px;
         font-weight: 500;
         line-height: 24px;
       }
     }
 
-    .ant-collapse-content {
-      .ant-collapse-content-box {
+    .ant-collapse-panel {
+      .ant-collapse-body {
         font-size: 14px;
         font-weight: 400;
         line-height: 20px;
         padding: 16px 0 0;
+
+        a {
+          text-decoration: underline;
+        }
 
         li {
           list-style-type: disc;
